testsuite/poke.pkl/int-union-type-diag-1.pk
/* { dg-do compile } */

type Foo =
  union int<0> /* { dg-error "" } */
  {
  };
